--- a/mods/canary.pw.toml
+++ b/mods/canary.pw.toml
@@ -1,6 +1,6 @@
 name = "Canary"
 filename = "canary-mc1.19.2-0.0.10.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/qa2H4BS9/versions/WmdwuZCo/canary-mc1.19.2-0.0.10.jar"
