--- a/mods/kubejs.pw.toml
+++ b/mods/kubejs.pw.toml
@@ -1,13 +1,13 @@
 name = "KubeJS"
-filename = "kubejs-forge-1902.6.0-build.119.jar"
+filename = "kubejs-forge-1902.6.0-build.123.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/umyGl7zF/versions/bFNvcZyN/kubejs-forge-1902.6.0-build.119.jar"
+url = "https://cdn.modrinth.com/data/umyGl7zF/versions/n4x8yoH4/kubejs-forge-1902.6.0-build.123.jar"
 hash-format = "sha1"
-hash = "925683771ad37c93ac462395f218c67916bbeda5"
+hash = "a1f15b51743cb8df430bb2ed93c39c6d3815dd16"
 
 [update]
 [update.modrinth]
 mod-id = "umyGl7zF"
-version = "bFNvcZyN"
+version = "n4x8yoH4"
