--- a/mods/kubejs.pw.toml
+++ b/mods/kubejs.pw.toml
@@ -1,13 +1,13 @@
 name = "KubeJS"
-filename = "kubejs-forge-1902.6.0-build.123.jar"
+filename = "kubejs-forge-1902.6.0-build.128.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/umyGl7zF/versions/n4x8yoH4/kubejs-forge-1902.6.0-build.123.jar"
+url = "https://cdn.modrinth.com/data/umyGl7zF/versions/8gps0YQi/kubejs-forge-1902.6.0-build.128.jar"
 hash-format = "sha1"
-hash = "a1f15b51743cb8df430bb2ed93c39c6d3815dd16"
+hash = "dd3d3f75ca9c763352c1108c55cd3fcecc250961"
 
 [update]
 [update.modrinth]
 mod-id = "umyGl7zF"
-version = "n4x8yoH4"
+version = "8gps0YQi"
