Updated Create and other mods

--- a/mods/create-enchantment-industry.pw.toml
+++ b/mods/create-enchantment-industry.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Enchantment Industry"
-filename = "create_enchantment_industry-1.19.2-for-create-0.5.0.f-1.1.7.jar"
+filename = "create_enchantment_industry-1.19.2-for-create-0.5.0.g-1.1.9.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "c1037ed87efd698224f2cba23fd469149bc5e632"
+hash = "650028a8f087a7960bb7c03193696a02fdec6b5b"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4132987
+file-id = 4175949
 project-id = 688768
